# Versarr

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.codex/: instructions.md
.codex/skills/: ci-remediation.md  ci-workflow-changes.md  github-issue-lifecycle.md  implementation-workflow.md  pull-request-workflow.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 20260513_0001_initial_state.py
docker/: Dockerfile  compose.example.yml  entrypoint.sh
docs/: architecture.md  configuration.md  deployment.md  engineering-playbook.md  interop-matrix.md  operations.md
docs/adr/: README.md
scripts/: benchmark_scan.py  smoke_container.sh
src/versarr/: __init__.py  bootstrap.py  cli.py
src/versarr/application/: __init__.py  services.py
src/versarr/application/contracts/: __init__.py  ports.py
src/versarr/config/: __init__.py  settings.py
src/versarr/domain/: __init__.py  entities.py  enums.py  hashing.py  normalization.py
src/versarr/infrastructure/filesystem/: __init__.py  locking.py  metadata.py  scanner.py  sidecar.py  stability.py  watcher.py
src/versarr/infrastructure/persistence/: __init__.py  db.py  repository.py  schema.py
src/versarr/infrastructure/provider/: __init__.py  lrclib.py
src/versarr/observability/: __init__.py  logging.py  metrics.py  paths.py
tests/: conftest.py
tests/container/: README.md
tests/fixtures/: README.md
tests/integration/: test_gap_report.py  test_job_processor_recovery.py  test_repository.py  test_sidecar_writer.py
tests/interop/: README.md
tests/unit/: test_hashing.py  test_locking.py  test_normalization.py  test_settings.py
(+2 files in other folders)
